--- a/views/pages/admin-dashboard.ejs
+++ b/views/pages/admin-dashboard.ejs
@@ -35,7 +35,7 @@
                         <h3>Send text</h3>
                     </div>
                 </a>
-                <a href="#">
+                <a href="/admin/announcement">
                     <div class="floating-box admin-controls__item">
                         <img src="/img/icons/announcement.svg"/>
                         <h3>Announcement</h3>
