--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,7 +22,7 @@
 
         <div id="announcements" class="component-container">
           <announcements>
-            <div v-for="item in test">
+            <div v-for="item in announcementsList">
               <announcement-item :title="item.title" :body="item.body" :date="item.date"></announcement-item>
             </div>
           </announcements>
