--- a/views/pages/admin-dashboard.ejs
+++ b/views/pages/admin-dashboard.ejs
@@ -67,7 +67,7 @@
     </section>
 </section>
 
-<!--<% include ../partials/footer %>-->
+<% include ../partials/footers/admin-footer %>
 
 </body>
 </html>
