--- a/views/pages/create-event.ejs
+++ b/views/pages/create-event.ejs
@@ -23,15 +23,9 @@
                     <h3>Create Event</h3>
                 </div>
                 <form id="send-text" method="post" action="/admin/create-event" enctype="multipart/form-data">
-                    <input name="name" class="send-text-name" type="text" placeholder="Event Name"/>
-                    <input name="time" class="input-half send-text-title" type="text" placeholder="Event Time"/>
-                    <input name="location" class="input-half send-text-location" type="text" placeholder="Where"/>
-                    <div class="form__add-image">
-                        <div class="form__add-image__image">
-                            <img class="bothC__relative" src="/img/icons/add-image.svg"/>
-                        </div>
-                        <h3>Add image</h3>
-                    </div>
+                    <input id="name" name="name" class="send-text-name" type="text" placeholder="Event Name"/>
+                    <input id="time" name="time" class="input-half send-text-title" type="text" placeholder="Event Time"/>
+                    <input id="location" name="location" class="input-half send-text-location" type="text" placeholder="Where"/>
                     <input type="file" name="upl"/>
                     <input class="button __blue" type="submit" placeholder="ADD"/>
                 </form>
@@ -42,55 +36,55 @@
 </section>
 
 <!--<script>-->
-    <!--$('#send-text').submit(function(e){-->
-        <!--e.preventDefault();-->
-        <!--var confirm = $(this).children('#confirm');-->
-        <!--var checkBox = $(this).children("input[type='checkbox']");-->
-        <!--var confirmText = $(this).children(".confirm-text")-->
-        <!--var messageBox = $(this).children("textarea");-->
-        <!--var message = messageBox.val();-->
+<!--$('#send-text').submit(function(e){-->
+<!--e.preventDefault();-->
+<!--var confirm = $(this).children('#confirm');-->
+<!--var checkBox = $(this).children("input[type='checkbox']");-->
+<!--var confirmText = $(this).children(".confirm-text")-->
+<!--var messageBox = $(this).children("textarea");-->
+<!--var message = messageBox.val();-->
 
 
 
 
-        <!--var data = {-->
-            <!--message: message-->
-        <!--}-->
-        <!--if(confirm.prop("checked") == true){-->
-            <!--$.ajax({-->
-                <!--type: 'POST',-->
-                <!--url: '/admin/create-event',-->
-                <!--data: data,-->
-                <!--success: function(data){-->
-                    <!--console.log(data);-->
-                    <!--messageBox.val("");-->
-                    <!--checkBox.prop('checked', false);-->
-                    <!--confirmText.removeClass("red");-->
-                    <!--swal({-->
-                        <!--title: "Message Sent!",-->
-                        <!--text: "Your message has been sent out to all participants at this hackathon",-->
-                        <!--type: "success",-->
-                        <!--confirmButtonText: "Great!"-->
-                    <!--});-->
-                <!--},-->
-                <!--error: function(data){-->
-                    <!--swal({-->
-                        <!--title: "Message not sent",-->
-                        <!--text: data.responseText,-->
-                        <!--type: "error",-->
-                        <!--confirmButtonText: "Okay"-->
-                    <!--});-->
-                <!--}-->
-            <!--})-->
-        <!--}-->
-        <!--else{-->
-            <!--confirmText.addClass("red");-->
-        <!--}-->
+<!--var data = {-->
+<!--message: message-->
+<!--}-->
+<!--if(confirm.prop("checked") == true){-->
+<!--$.ajax({-->
+<!--type: 'POST',-->
+<!--url: '/admin/create-event',-->
+<!--data: data,-->
+<!--success: function(data){-->
+<!--console.log(data);-->
+<!--messageBox.val("");-->
+<!--checkBox.prop('checked', false);-->
+<!--confirmText.removeClass("red");-->
+<!--swal({-->
+<!--title: "Message Sent!",-->
+<!--text: "Your message has been sent out to all participants at this hackathon",-->
+<!--type: "success",-->
+<!--confirmButtonText: "Great!"-->
+<!--});-->
+<!--},-->
+<!--error: function(data){-->
+<!--swal({-->
+<!--title: "Message not sent",-->
+<!--text: data.responseText,-->
+<!--type: "error",-->
+<!--confirmButtonText: "Okay"-->
+<!--});-->
+<!--}-->
+<!--})-->
+<!--}-->
+<!--else{-->
+<!--confirmText.addClass("red");-->
+<!--}-->
 
-    <!--});-->
+<!--});-->
 <!--</script>-->
 
-<% include ../partials/footer %>
+<% include ../partials/footers/admin-footer %>
 
 </body>
 </html>
