--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,12 +42,10 @@
           <timeline></timeline>
         </div>
 
-
-
       </section>
     </section>
 
-    <% include ../partials/footer %>
+    <% include ../partials/footers/footer-vue %>
 
   </body>
 </html>
