--- a/views/partials/footers/admin-footer.ejs
+++ b/views/partials/footers/admin-footer.ejs
@@ -1,2 +1,2 @@
-<script src="/js/components.js"></script>
-<script src="/js/admin-dash.js"></script>
+<!--<script src="/js/components.js"></script>-->
+<!--<script src="/js/admin-dash.js"></script>-->
