--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,4 +3,11 @@
         <img src="/img/bullhacks-head.png" alt="BullHacks"/>
         <h3>BullHacks Event Tracker</h3>
     </div>
+    <% if( verified ){ %>
+        <a href="/login/logout">
+            <div class="logout">
+                <h4>Logout</h4>
+            </div>
+        </a>
+    <% } %>
 </nav>
