--- a/views/partials/profile-info.ejs
+++ b/views/partials/profile-info.ejs
@@ -1,6 +1,6 @@
 <div class="profile-info">
-    <%if (picture == null) { %>
-        <img src="/img/bullhacks-head.png"/>
-    <% } %>
+    <div class="profile-info__picture">
+        <img src="<%= picture %>"/>
+    </div>
     <h1>Welcome, <%= name %>!</h1>
 </div>
