--- a/views/partials/side-bar.ejs
+++ b/views/partials/side-bar.ejs
@@ -19,8 +19,8 @@
             <img class="bothC__relative" src="/img/icons/challenges.svg"/>
         </div>
     </a>
-    <a href="/login">
-        <div class="side-bar__item" <% if(pageName === 'login') { %> class="side-bar__active" <% } %>>
+    <a href="/login" <% if(pageName === 'admin') { %> class="side-bar__active" <% } %>>
+        <div class="side-bar__item">
             <img class="side-bar__item__lock bothC__relative" src="/img/icons/login.svg"/>
         </div>
     </a>
