--- a/scss/modules/_profile-info.scss
+++ b/scss/modules/_profile-info.scss
@@ -14,6 +14,7 @@
     height: 100px;
     overflow: hidden;
     border-radius: 50%;
+    margin: auto;
     img{
       height: 100%;
       width: auto;
