--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -45,6 +45,51 @@
       </section>
     </section>
 
+    <script>
+
+      function setCookie(cname, cvalue, exdays) {
+        var d = new Date();
+        d.setTime(d.getTime() + (exdays*24*60*60*1000));
+        var expires = "expires="+ d.toUTCString();
+        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        $('.main-content__button').html("Auto-refresh Active");
+        checkCookie()
+      }
+
+      function getCookie(cname) {
+        var name = cname + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var ca = decodedCookie.split(';');
+        for(var i = 0; i <ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+          }
+          if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+          }
+        }
+        return false;
+      }
+
+      function checkCookie(){
+        if(getCookie("uniq") == false){
+          Push.create("Notifications Enabled", {
+            body: "Thank you for turning notifications on for MesaHub! I hope I can be of great help.",
+            icon: "/img/bullhacks-head.png",
+            timeout: 4000,
+            onClick: function () {
+              window.focus();
+              this.close();
+            }
+          });
+          setCookie("uniq", true, 999);
+        }
+      }
+      checkCookie();
+
+    </script>
+
     <% include ../partials/footers/footer-vue %>
 
   </body>
