--- a/views/partials/headers/index.ejs
+++ b/views/partials/headers/index.ejs
@@ -4,4 +4,5 @@
 <script src="/js/vue.js"></script>
 <link href="stylesheets/css/timetablejs.css" type="text/css" rel="stylesheet"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="/js/push.min.js"></script>
 <script src="js/timetable.min.js"></script>
