--- a/views/pages/timeline.ejs
+++ b/views/pages/timeline.ejs
@@ -1,93 +1,22 @@
-Vue.component('countdown', {
-    props: ['time'],
-    template: `
-        <div id="timeComponent" class="component component__time">
-            <div class="component__flex">
-                <div class="component__left">
-                    <img class="vertC__relative" src="/img/icons/time.svg"/>
-                </div>
-                <div class="component__right">
-                    <h4 class="component__time__title">Time left:</h4>
-                    <h1 class="component__time__time">{{time}}</h1>
-                </div>
-            </div>
-        </div>
-    `
-});
+<!DOCTYPE html>
+<html>
+  <head>
+    <% include ../partials/headers/index %>
 
-//Announcement Component
-Vue.component('announcements', {
-    template: `
-        <div id="announcements">
-          <div class="component component__announcement">
-            <div class="component__flex">
-              <div class="component__left">
-                <div class="vertC__relative">
-                  <img src="/img/icons/announcement.svg"/>
-                  <h4>Announcements</h4>
-                </div>
-              </div>
-              <div class="component__right component__announcement__right">
-        
-                <slot></slot>
-        
-              </div>
-            </div>
-          </div>
-        </div>
-    `
-})
+    <link type="text/css" rel="stylesheet" href="./stylesheets/css/modules/timeline.css"/>
 
-Vue.component('announcement-item', {
-    props: ['title', 'body', 'date'],
-    template: `
-        
-        <div class="component__announcement__right__item">
-            <div class="component__announcement__right__item__header">
-              <h4>{{title}} <span class="vert-line"> | </span> </h4> <p>{{date}}</p> <h5 style="display: none">NEW!</h5>
-            </div>
-            <h4>{{body}}</h4>
-         </div>
-    `
-});
+  </head>
+  <body>
 
-//Workshop Component
-Vue.component('workshops', {
-   template: `
-            <div class="component component__workshops">
-                <div class="component__header">
-                    <h3>Events</h3>
-                </div>
-                <div class="component__workshops__list">
-                    <slot></slot>
-                </div>
-            </div>
-   `
-});
+    <% include ../partials/side-bar %>
 
-Vue.component('workshop-item', {
-    props: ['name', 'picture', 'location', 'time', 'time2'],
-    template: `
-        <div class="component__workshops__item">
-            <img id="workshop-item-image" :src="picture"/>
-            <div class="component__workshops__item__info">
-                <h4>{{name}}</h4>
-                <p>{{location}} | {{time}} <span v-if="time2">:</span> {{time2}} </p>
-            </div>
-        </div>
-    `
+    <section class="page">
+      <nav>
+        <% include ../partials/nav %>
+      </nav>
+      <section id="main">
 
-});
-
-//Timeline component
-Vue.component('timeline', {
-   template: `
-        <div class="component float__right">
-            <div class="component__header">
-                <h3>Timeline</h3>
-            </div>
-            <div id="timetable-item" class="component__timetable">
-            <div class="timeline timeline__component">
+        <div class="timeline timeline__page">
           <table>
 
             <tr>
@@ -276,11 +205,55 @@ Vue.component('timeline', {
 
           </table>
         </div>
-</div>
-        </div>
-   `
-});
 
-// Vue.component('floating-box', {
-//     template:
-// })
+    </section>
+
+    <script>
+
+      function setCookie(cname, cvalue, exdays) {
+        var d = new Date();
+        d.setTime(d.getTime() + (exdays*24*60*60*1000));
+        var expires = "expires="+ d.toUTCString();
+        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        $('.main-content__button').html("Auto-refresh Active");
+        checkCookie()
+      }
+
+      function getCookie(cname) {
+        var name = cname + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var ca = decodedCookie.split(';');
+        for(var i = 0; i <ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+          }
+          if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+          }
+        }
+        return false;
+      }
+
+      function checkCookie(){
+        if(getCookie("uniq") == false){
+          Push.create("Notifications Enabled", {
+            body: "Thank you for turning notifications on for MesaHub! I hope I can be of great help.",
+            icon: "/img/bullhacks-head.png",
+            timeout: 4000,
+            onClick: function () {
+              window.focus();
+              this.close();
+            }
+          });
+          setCookie("uniq", true, 999);
+        }
+      }
+      checkCookie();
+
+    </script>
+
+    <% include ../partials/footers/footer-vue %>
+
+  </body>
+</html>
