--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="./stylesheets/css/modules/timeline.css"/>
 
   </head>
-  <body>
+  <body>npm
 
     <% include ../partials/side-bar %>
 
