--- a/public/stylesheets/css/modules/timeline.css
+++ b/public/stylesheets/css/modules/timeline.css
@@ -500,7 +500,8 @@ nav {
   .timeline__page {
     width: 80%; }
   .timeline__component {
-    width: 95%; }
+    width: 100%;
+    margin-top: 0px !important; }
   .timeline table {
     text-align: center;
     font-family: "Open Sans", sans-serif;
