--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -87,6 +87,9 @@
           });
           setCookie("uniq", true, 999);
         }
+        if(getCookie("refresh") == true){
+          document.cookie = "refresh" + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+        }
       }
       checkCookie();
 
